k8s/nginx/firstapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: firstapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: firstapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: firstapp
  template:
    metadata:
      labels:
        app: firstapp
    spec:
      containers:
      - name: webapp
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
