k8s/nginx/secondapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: secondapp
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: secondapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secondapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: secondapp
  template:
    metadata:
      labels:
        app: secondapp
    spec:
      containers:
      - name: webapp
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
