k8s/nginx/ingress-host-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - api.hegraca-org.com
    - demo.hegraca-org.com
    secretName: myapp-tls
  rules:
  - host: api.hegraca-org.com
    http:
      paths:
      - path: /
        backend:
          serviceName: firstapp
          servicePort: 80
  - host: demo.hegraca-org.com
    http:
      paths:
      - path: /
        backend:
          serviceName: secondapp
          servicePort: 80
