k8s/nginx/ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.myapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: firstapp
          servicePort: 80
  - host: demo.myapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: secondapp
          servicePort: 80
