k8s/nginx/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: firstapp
          servicePort: 80
        path: /first
      - backend:
          serviceName: secondapp
          servicePort: 80
        path: /second
